# CS797V-RTIDS

./: .envrc  .gitignore  DATA.md  README.md  SETUP.md  SimillarHTTP_ValueSet.csv  devenv.nix  packages.txt  print_unique.py  requirements.txt
RTIDS/: pyproject.toml
RTIDS/scripts/: contains_labels.py  csv_schema_check.py  find_string_entries.py  get_columns.py  init_data.py  preprocess.py  utils.py
RTIDS/src/: data.py  main.py  model.py  naive_numerical_conversion.py
RTIDS/testing/: convert_to_numerical.py
schemas/: CIC-DDoS2019_SCHEMA.md  CICIDS2017_SCHEMA.md
scripts/: csv_schema.py  get_columns.py  init_data.py  process_ips.py  unzip_to_csv.py
scripts/data_scripts/: get_types.py
scripts/data_scripts/init/: get_types.py  unzip_to_csv.py
scripts/data_scripts/methods/: normalize.py  process_simillar_http.py  process_timestamp.py
scripts/data_scripts/processing/: base_process.py  process_and_zip.py  processing_1.py  simmilar_http.py
scripts/data_scripts/testing/: check_simillar_http.py  datasize.py
src/: embedding.py  encoder.py  examine_data.py  pos_encoding.py  preprocess_data.py
