[project]
name = "rtids"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2026.3.0",
    "imbalanced-learn>=0.14.1",
    "keras>=3.13.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
